# ZeaClicker

./: NDK_README.md  README.md  build_and_sign.sh  generate_keystore.sh  settings.gradle
.github/: README_PROJECT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/greenclicker/: ClickAccessibilityService.kt  DebugOverlayManager.kt  ImageProcessorHSV.kt  MainActivity.kt  NativeProcessor.kt  NotificationHelper.kt  OverlayService.kt  ROISelectionOverlay.kt  ScreenCaptureNativeSnippet.kt  ScreenCaptureService.kt
app/src/main/res/layout/: activity_main.xml  float_button_layout.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml
